[feat] 引入变色龙哈希
--stroy==217220411132156
